logs/solidpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Solid'...
Compiling './lib/python3.5/site-packages/Solid/EvolutionaryAlgorithm.py'...
***   File "./lib/python3.5/site-packages/Solid/EvolutionaryAlgorithm.py", line 187
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Solid/GeneticAlgorithm.py'...
***   File "./lib/python3.5/site-packages/Solid/GeneticAlgorithm.py", line 190
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Solid/HarmonySearch.py'...
***   File "./lib/python3.5/site-packages/Solid/HarmonySearch.py", line 143
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Solid/ParticleSwarm.py'...
***   File "./lib/python3.5/site-packages/Solid/ParticleSwarm.py", line 172
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Solid/SimulatedAnnealing.py'...
***   File "./lib/python3.5/site-packages/Solid/SimulatedAnnealing.py", line 147
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Solid/StochasticHillClimb.py'...
***   File "./lib/python3.5/site-packages/Solid/StochasticHillClimb.py", line 117
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Solid/TabuSearch.py'...
***   File "./lib/python3.5/site-packages/Solid/TabuSearch.py", line 112
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/solidpy-0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
